<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Result_edit">

    <TextView
        android:id="@+id/research_result_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:layout_centerHorizontal="true"
        android:text="@string/research_result_txt"
        android:textColor="#5D8DC7"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/create_result_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_result_txt"
        android:textSize="15dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/research_result_txt"
        android:layout_centerHorizontal="true"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_above="@+id/research_result_submit_btn"
        android:layout_below="@id/create_result_txt"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:scrollbars="none"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/classificationtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/result_classificationtxt"
                android:textColor="#000000"
                android:textSize="15dp"/>

            <Spinner
                android:id="@+id/classificationedit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/classificationtxt"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:entries="@array/resulteditmenu"/>

            <TextView
                android:id="@+id/announcement_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/classificationedit"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/announcement_date"
                android:textColor="#000000"
                android:textSize="15dp"/>

            <TextView
                android:id="@+id/announcement_date_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/announcement_date"
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:hint="@string/announcement_date_txt"
                android:layout_marginTop="7dp"
                android:layout_marginRight="10dp"
                android:padding="7dp"
                android:paddingLeft="10dp"
                android:onClick="onCalendar2"
                android:layout_alignParentStart="true"
                android:background="@drawable/corner_ractangle"/>

            <TextView
                android:id="@+id/thesis_name_ko_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/announcement_date_txt"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/thesis_name_ko_txt"
                android:textColor="#000000"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/thesis_name_ko"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/thesis_name_ko_txt"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/corner_ractangle"
                android:hint="@string/thesis_name_ko"
                android:padding="7dp"
                android:paddingLeft="10dp"
                android:singleLine="true" />

            <TextView
                android:id="@+id/thesis_name_en_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/thesis_name_ko"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/thesis_name_en_txt"
                android:textColor="#000000"
                android:textSize="15dp"/>


            <EditText
                android:id="@+id/thesis_name_en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/thesis_name_en_txt"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:singleLine="true"
                android:padding="7dp"
                android:hint="@string/thesis_name_en"
                android:paddingLeft="10dp"
                android:background="@drawable/corner_ractangle"/>


            <TextView
                android:id="@+id/academic_society_academic_name_ko_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/thesis_name_en"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/academic_society_academic_name_ko_txt"
                android:textColor="#000000"
                android:textSize="15dp"/>


            <EditText
                android:id="@+id/academic_society_academic_name_ko"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/academic_society_academic_name_ko_txt"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:singleLine="true"
                android:padding="7dp"
                android:hint="@string/academic_society_academic_name_ko"
                android:paddingLeft="10dp"
                android:background="@drawable/corner_ractangle"/>

            <TextView
                android:id="@+id/academic_society_academic_name_en_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/academic_society_academic_name_ko"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/academic_society_academic_name_en_txt"
                android:textColor="#000000"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/academic_society_academic_name_en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/academic_society_academic_name_en_txt"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:singleLine="true"
                android:padding="7dp"
                android:inputType="textEmailAddress"
                android:hint="@string/academic_society_academic_name_en"
                android:paddingLeft="10dp"
                android:background="@drawable/corner_ractangle"/>

            <TextView
                android:id="@+id/author_ko"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/academic_society_academic_name_en"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/author_ko"
                android:textColor="#000000"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/author_ko_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/author_ko"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:singleLine="true"
                android:padding="7dp"
                android:hint="@string/author_ko_txt"
                android:paddingLeft="10dp"
                android:background="@drawable/corner_ractangle"/>

            <TextView
                android:id="@+id/author_en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/author_ko_txt"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/author_en"
                android:textColor="#000000"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/author_en_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/author_en"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:singleLine="true"
                android:padding="7dp"
                android:hint="@string/author_en_txt"
                android:paddingLeft="10dp"
                android:background="@drawable/corner_ractangle"/>

            <TextView
                android:id="@+id/presentation_medium_ko"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/author_en_txt"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/presentation_medium_ko"
                android:textColor="#000000"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/presentation_medium_ko_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/presentation_medium_ko"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:singleLine="true"
                android:padding="7dp"
                android:hint="@string/presentation_medium_ko_txt"
                android:paddingLeft="10dp"
                android:background="@drawable/corner_ractangle"/>

            <TextView
                android:id="@+id/presentation_medium_en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/presentation_medium_ko_txt"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/presentation_medium_en"
                android:textColor="#000000"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/presentation_medium_en_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/presentation_medium_en"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:singleLine="true"
                android:padding="7dp"
                android:hint="@string/presentation_medium_en_txt"
                android:paddingLeft="10dp"
                android:background="@drawable/corner_ractangle"/>

            <TextView
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/presentation_medium_en_txt"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/country"
                android:textColor="#000000"
                android:textSize="15dp"/>

            <Spinner
                android:id="@+id/country_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/country"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:entries="@array/countryname"/>

            <TextView
                android:id="@+id/related_task_ko"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/country_edit"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/related_task_ko"
                android:textColor="#000000"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/related_task_ko_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/related_task_ko"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="top"
                android:padding="7dp"
                android:hint="@string/related_task_ko_txt"
                android:paddingLeft="10dp"
                android:background="@drawable/corner_ractangle"/>

            <TextView
                android:id="@+id/related_task_en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/related_task_ko_txt"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/related_task_en"
                android:textColor="#000000"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/related_task_en_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/related_task_en"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="top"
                android:padding="7dp"
                android:hint="@string/related_task_en_txt"
                android:paddingLeft="10dp"
                android:background="@drawable/corner_ractangle"/>

            <TextView
                android:id="@+id/abstract_ko"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/related_task_en_txt"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/abstract_ko"
                android:textColor="#000000"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/abstract_ko_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/abstract_ko"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="top"
                android:padding="7dp"
                android:hint="@string/abstract_ko_txt"
                android:paddingLeft="10dp"
                android:background="@drawable/corner_ractangle"/>

            <TextView
                android:id="@+id/abstract_en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/abstract_ko_txt"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/abstract_en"
                android:textColor="#000000"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/abstract_en_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/abstract_en"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="top"
                android:padding="7dp"
                android:hint="@string/abstract_en_txt"
                android:paddingLeft="10dp"
                android:background="@drawable/corner_ractangle"/>

        </RelativeLayout>
    </ScrollView>
    <Button
        android:id="@+id/research_result_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#6674FD"
        android:text="@string/research_result_submit_btn"
        android:textColor="#FFFFFF"
        android:textSize="17dp" />

</RelativeLayout>